# cert-manager-webhook-ns1

./: .bazelrc  .dockerignore  .gitignore  .releaserc.json  .shellcheckrc  BUILD.bazel  CHANGELOG.md  Dockerfile  MODULE.bazel  Makefile  README.md  go.mod  go.sum  package.json  release-please-config.json
.github/workflows/: build.yaml  ci.yaml  lint.yaml  publish.yaml  release-please.yaml  release.yaml
bazel/: BUILD.bazel  workspace_status.sh
bazel/lint/: linters.bzl
chart/: BUILD.bazel  Chart.yaml  values.yaml
chart/templates/: deployment.yaml  rbac.yaml  service.yaml
cmd/webhook/: BUILD.bazel  main.go
image/: BUILD.bazel
pkg/solver/: BUILD.bazel  ns1.go
tools/lint/: BUILD.bazel
