"""cert-manager DNS01 webhook solver for NS1."""

module(
    name = "cert_manager_webhook_ns1",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "rules_img", version = "0.3.13")
bazel_dep(name = "rules_helm", version = "0.29.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "aspect_rules_lint", version = "2.7.1")

# Go SDK -------------------------------------------------------------------
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

# Run `go vet`-equivalent static analysis on first-party code during build/test.
go_sdk.nogo(
    nogo = "//:nogo",
    includes = ["//:__subpackages__"],
)

# Go module dependencies (resolved from go.mod) ----------------------------
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# Use the checked-in *.pb.go from external modules instead of regenerating
# go_proto rules, which otherwise fail to resolve across k8s.io repositories.
go_deps.gazelle_default_attributes(
    directives = ["gazelle:proto disable_global"],
)
go_deps.from_file(go_mod = "//:go.mod")

# `bazel mod tidy` maintains the use_repo list below.
use_repo(
    go_deps,
    "com_github_cert_manager_cert_manager",
    "in_gopkg_ns1_ns1_go_v2",
    "io_k8s_apiextensions_apiserver",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
)

# Helm toolchain -----------------------------------------------------------
helm = use_extension("@rules_helm//helm:extensions.bzl", "helm")
helm.host_tools()
use_repo(helm, "helm", "helm_toolchains")

register_toolchains("@helm_toolchains//:all")

# Base container image -----------------------------------------------------
pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

# gcr.io/distroless/static-debian12:latest (multi-arch index)
pull(
    name = "distroless_static",
    digest = "sha256:9c346e4be81b5ca7ff31a0d89eaeade58b0f95cfd3baed1f36083ddb47ca3160",
    registry = "gcr.io",
    repository = "distroless/static-debian12",
    tag = "latest",
)
