load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_img//img:image.bzl", "image_from_binary")
load("@rules_img//img:push.bzl", "image_push")

# Version tag for the published image. Override in CI with
# `--//image:version=<release version>`; defaults to "latest".
string_flag(
    name = "version",
    build_setting_default = "latest",
    visibility = ["//visibility:public"],
)

# Multi-arch (linux/amd64 + linux/arm64) image. entrypoint/cmd/env are taken
# from the //cmd/webhook:webhook binary automatically.
image_from_binary(
    name = "image",
    base = "@distroless_static",
    binary = "//cmd/webhook:webhook",
    platforms = [
        "//:linux_amd64",
        "//:linux_arm64",
    ],
    visibility = ["//visibility:public"],
)

# `bazel run //image:push` pushes to GHCR.
# Tags: latest, the release version, and the git SHA (the SHA tag requires
# --stamp / --config=release).
image_push(
    name = "push",
    build_settings = {"VERSION": ":version"},
    image = ":image",
    registry = "ghcr.io",
    repository = "bpalermo/cert-manager-webhook-ns1",
    tag_list = [
        "latest",
        "{{.VERSION}}",
        "{{.STABLE_GIT_SHA}}",
    ],
    visibility = ["//visibility:public"],
)
